<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/planetearth"
    tools:context="com.example.aaa.noplaneta_2dam.LoginActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/bromello"
        android:text="@string/app_nameX"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="55sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/titulo"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/idDont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:clickable="true"
        android:text="@string/textoAccount"
        android:textColor="@android:color/background_light" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView4"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="30dp"
        android:alpha="0.5"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/idUser"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/idPasswd"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:shadowColor="@android:color/holo_blue_bright"
            android:textColor="@android:color/background_dark"
            android:textColorLink="@android:color/holo_orange_light" />

        <EditText
            android:id="@+id/idPasswd3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/idBTN"
            android:ems="10"
            android:hint="@string/cont"
            android:inputType="textPassword"
            android:textColor="@android:color/background_dark"
            android:textColorLink="@android:color/holo_orange_light" />

    </LinearLayout>


    <Button
        android:id="@+id/idBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/idDont"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_marginBottom="40dp"
        android:onClick="onClick"
        android:text="@string/sign" />
</RelativeLayout>
